--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>Rauno Raa JavaScript App</h1>
-    <img src="../example.jpg" alt="Example Image">
+    <img src="../src/example.jpg" alt="Example Image">
   </main>
 </body>
 
