file paths changed again

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../src/styles.css">
+  <link rel="stylesheet" href="../styles.css">
   <title>Vanilla JavaScript App</title>
 </head>
 
 <body>
   <main>
     <h1>Rauno Raa JavaScript App</h1>
-    <img src="../src/example.jpg" alt="Example Image">
+    <img src="../example.jpg" alt="Example Image">
   </main>
 </body>
 
